[gd_scene load_steps=55 format=3 uid="uid://d8dyhwt8qhlb"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_2l1ya"]
[ext_resource type="Texture2D" uid="uid://bcwm641hil2dw" path="res://art/placeholderwick.png" id="1_efa6v"]
[ext_resource type="Texture2D" uid="uid://biuu5g75878h7" path="res://art/64x64 pixel light.png" id="3_rq5r5"]
[ext_resource type="Texture2D" uid="uid://bdlr8iycpb6kw" path="res://art/healthindicator.png" id="4_07t43"]
[ext_resource type="Script" path="res://scenes/HealthIndicator.gd" id="4_145t5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_su2ee"]
size = Vector2(10, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mf03"]
atlas = ExtResource("1_efa6v")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_unaqi"]
atlas = ExtResource("1_efa6v")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpw7r"]
atlas = ExtResource("1_efa6v")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tapxv"]
atlas = ExtResource("1_efa6v")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_smegl"]
atlas = ExtResource("1_efa6v")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghsv3"]
atlas = ExtResource("1_efa6v")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxrfh"]
atlas = ExtResource("1_efa6v")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_32485"]
atlas = ExtResource("1_efa6v")
region = Rect2(224, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sl8ej"]
atlas = ExtResource("1_efa6v")
region = Rect2(256, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_85yek"]
atlas = ExtResource("1_efa6v")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yet6"]
atlas = ExtResource("1_efa6v")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7tqj"]
atlas = ExtResource("1_efa6v")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5nlkr"]
atlas = ExtResource("1_efa6v")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_20jxb"]
atlas = ExtResource("1_efa6v")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2wmv"]
atlas = ExtResource("1_efa6v")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryifq"]
atlas = ExtResource("1_efa6v")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aylg7"]
atlas = ExtResource("1_efa6v")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ic5ou"]
atlas = ExtResource("1_efa6v")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d267s"]
atlas = ExtResource("1_efa6v")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_06su4"]
atlas = ExtResource("1_efa6v")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_24usj"]
atlas = ExtResource("1_efa6v")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7nyf"]
atlas = ExtResource("1_efa6v")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pc4v"]
atlas = ExtResource("1_efa6v")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qanu3"]
atlas = ExtResource("1_efa6v")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fv64p"]
atlas = ExtResource("1_efa6v")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c17sl"]
atlas = ExtResource("1_efa6v")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ht2kw"]
atlas = ExtResource("1_efa6v")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdvsh"]
atlas = ExtResource("1_efa6v")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hxpw"]
atlas = ExtResource("1_efa6v")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpepj"]
atlas = ExtResource("1_efa6v")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pl3h"]
atlas = ExtResource("1_efa6v")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4k3hu"]
atlas = ExtResource("1_efa6v")
region = Rect2(224, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6oq2k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mf03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unaqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpw7r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tapxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smegl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghsv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxrfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32485")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sl8ej")
}],
"loop": false,
"name": &"death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_85yek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yet6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7tqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5nlkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20jxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2wmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryifq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aylg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ic5ou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d267s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06su4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24usj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7nyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pc4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qanu3")
}],
"loop": true,
"name": &"hop",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fv64p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c17sl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ht2kw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdvsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hxpw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpepj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pl3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4k3hu")
}],
"loop": true,
"name": &"walk",
"speed": 13.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0vq3f"]
radius = 8.0
height = 40.0

[sub_resource type="AtlasTexture" id="AtlasTexture_kh85k"]
atlas = ExtResource("4_07t43")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aawhd"]
atlas = ExtResource("4_07t43")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dwu7"]
atlas = ExtResource("4_07t43")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdidr"]
atlas = ExtResource("4_07t43")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ssmd"]
atlas = ExtResource("4_07t43")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lahyr"]
atlas = ExtResource("4_07t43")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7748"]
atlas = ExtResource("4_07t43")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7w5q"]
atlas = ExtResource("4_07t43")
region = Rect2(112, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_lr58p"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kh85k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aawhd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dwu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdidr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ssmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lahyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7748")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7w5q")
}],
"loop": false,
"name": &"extinguish",
"speed": 10.0
}]

[sub_resource type="Shader" id="Shader_ah4sv"]
code = "shader_type canvas_item;

void vertex() {
	// Called for every vertex the material is visible on.
}

void fragment() {
	// Called for every pixel the material is visible on.
}

//void light() {
	// Called for every pixel for every light affecting the CanvasItem.
	// Uncomment to replace the default light processing function with this one.
//}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ilg51"]
shader = SubResource("Shader_ah4sv")

[sub_resource type="Animation" id="Animation_x7pml"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.46, 0.46, 0)]
}

[sub_resource type="Animation" id="Animation_ucl1h"]
resource_name = "flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0.46, 0.46, 0), Color(1, 0.458824, 0.458824, 0.301961), Color(1, 0.46, 0.46, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_plcrs"]
_data = {
"RESET": SubResource("Animation_x7pml"),
"flash": SubResource("Animation_ucl1h")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
y_sort_enabled = true
collision_mask = 6
slide_on_ceiling = false
script = ExtResource("1_2l1ya")
SPEED = 150
knockback_strength = 1000.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(1, -10.5)
shape = SubResource("RectangleShape2D_su2ee")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, -16)
color = Color(0.94902, 0.92549, 0.545098, 1)
shadow_enabled = true
texture = ExtResource("3_rq5r5")
offset = Vector2(0, -6.5)
texture_scale = 2.17

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
light_mask = 0
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_6oq2k")
autoplay = "default"
frame_progress = 0.0712453
offset = Vector2(0, -16)

[node name="Area2D" type="Area2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -14)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_0vq3f")

[node name="Camera2D" type="Camera2D" parent="."]
y_sort_enabled = true
position_smoothing_enabled = true

[node name="I-FrameTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="HealthIndicator" type="CanvasLayer" parent="."]
script = ExtResource("4_145t5")

[node name="healthOutline" type="ColorRect" parent="HealthIndicator"]
offset_right = 40.0
offset_bottom = 16.0
mouse_filter = 2
color = Color(0.356863, 0.356863, 0.356863, 0.478431)

[node name="health1" type="AnimatedSprite2D" parent="HealthIndicator"]
position = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_lr58p")
animation = &"extinguish"

[node name="health2" type="AnimatedSprite2D" parent="HealthIndicator"]
position = Vector2(20, 8)
sprite_frames = SubResource("SpriteFrames_lr58p")
animation = &"extinguish"

[node name="health3" type="AnimatedSprite2D" parent="HealthIndicator"]
position = Vector2(32, 8)
sprite_frames = SubResource("SpriteFrames_lr58p")
animation = &"extinguish"

[node name="dmgFlash" type="ColorRect" parent="HealthIndicator"]
material = SubResource("ShaderMaterial_ilg51")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.46, 0.46, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="HealthIndicator/dmgFlash"]
libraries = {
"": SubResource("AnimationLibrary_plcrs")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="I-FrameTimer" to="." method="_on_i_frame_timer_timeout"]
